[CHR-10] Add pagination to GetEmployeeCartsInTrip (#45)
