# internal/handler/http/encoder/encoder.go
@@ -19,6 +19,9 @@ func EncodeResponse(_ context.Context, w http.ResponseWriter, response interface
 	case schemas.GetEmployeeCartsInTripResponse:
 		w.WriteHeader(http.StatusOK)
 		return json.NewEncoder(w).Encode(res)
+	case schemas.GetEmployeeCartsInTripPagedResponse:
+		w.WriteHeader(http.StatusOK)
+		return json.NewEncoder(w).Encode(res)
 	case schemas.GetEmployeeIDsByTripResponse:
 		w.WriteHeader(http.StatusOK)
 		return json.NewEncoder(w).Encode(res)
